@@ -1,6 +1,12 @@
 2.1.0 2012-??-??
- * fixes #972: warning/error when XCache is loaded incorrectly
- * fixes #73: warn for improper PHP_FCGI_CHILDREN setting fcgi mode
+API Changes
+========
+ * chg: proto array xcache_clear_cache(int type, [ int id = -1 ]). -1 means all cache splits
+ChangeLog
+========
+ * closes #972: warning/error when XCache is loaded incorrectly
+ * closes #73: warn for improper PHP_FCGI_CHILDREN setting fcgi mode
+ * closes #174: updated api for clear all cache
 
 2.0.1 2012-07-14
 ChangeLog
